syntax = "proto3";

package remoteGPU;

service RemoteGPU {
    rpc UploadFile (File) returns (FileID) {}
    rpc DownloadFile (FileID) returns (File) {}
    rpc Execute (FileID) returns (stream Output) {}
}

message File {
    repeated string code = 1;
    repeated string commands = 2;
}

message FileID {
    int32 id = 1;
}

message Output {
     bytes out = 1;
}